--- a/src/index.html
+++ b/src/index.html
@@ -1,9 +1,30 @@
-<html>
-  <head>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Minesweeper</title>
-    
-  </head>
-  <body>
-    <h1>Hello world</h1>
-  </body>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body onload="startWithDefault()">
+    <h1>Minesweeper</h1>
+    <div id="controls">
+        <label for="difficulty">Difficulty:</label>
+        <select id="difficulty">
+            <option value="easy">Easy</option>
+            <option value="medium">Medium</option>
+            <option value="expert">Expert</option>
+        </select>
+
+        <label for="bombProbability">Bomb Probability:</label>
+        <input type="number" id="bombProbability" value="3" min="1" max="10">
+
+        <label for="maxProbability">Max Probability:</label>
+        <input type="number" id="maxProbability" value="15" min="10" max="30">
+
+        <button id="startGame">Start Game</button>
+    </div>
+    <div id="game-container"></div>
+    <script src="solution-template.js"></script>
+</body>
 </html>
